Unwrap minimal SDL app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)
+
 add_executable(hellforge 
     src/main.cpp
 )
+
+target_link_libraries(hellforge PRIVATE SDL3::SDL3)
